# Crypto_TSDB

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docs/: Notes.md  database.md
sql/: schema.sql
src/: config.py  crypto.py  cryptoapi.py  cryptodb.py  cryptomarket.py  entrypoint.py  helper.py  tsdb.py
src/data/: config.py  metadata.py  static.py
src/helper/: helper.py  logger.py
