[tool.poetry]
name = " Crypto_TSDB"
version = "0.1.0"
description = ""
authors = ["henryhcheung1 <henryhcheung1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
alpha-vantage = "^2.3.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
